// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery Image Component renders correctly 1`] = `
<div
  className="img1in1"
  id={1}
  style={
    Object {
      "backgroundImage": "url(xyz)",
    }
  }
>
   
</div>
`;

exports[`Next Image Arrow Component renders correctly 1`] = `
<div
  className="arrow"
  id="next-arrow"
>
  &gt;
</div>
`;

exports[`Previous Image Arrow Component renders correctly 1`] = `
<div
  className="arrow"
  id="prev-arrow"
  onClick={[Function]}
>
  &lt;
</div>
`;
